unpackaged/main/default/objects/Group_Event__c/Group_Event__c.object-meta.xml
<CustomObject>
    <label>Group Event</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>