unpackaged/main/default/objects/Group_Event__c/fields/Date_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Event__c</fullName>
    <description>Expected date of event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Event</label>
    <type>DateTime</type>
</CustomField>