unpackaged/main/default/objects/Group_Event__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>(End_Time__c -  Start_Time__c)</formula>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>