unpackaged/main/default/objects/Group_Event__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Event end time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>