unpackaged/main/default/objects/Group_Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Maps link to location</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Location</label>
    <type>Url</type>
</CustomField>