unpackaged/main/default/objects/Group_Event__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Event start time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>